@@ -17,12 +17,11 @@ import java.time.ZonedDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.opentripplanner.ConstantsForTests;
+import org.opentripplanner.OtpModel;
 import org.opentripplanner.graph_builder.model.GtfsBundle;
 import org.opentripplanner.graph_builder.module.DirectTransferGenerator;
 import org.opentripplanner.graph_builder.module.GtfsModule;
@@ -36,6 +35,7 @@ import org.opentripplanner.routing.core.TraverseMode;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.standalone.config.RouterConfig;
 import org.opentripplanner.standalone.server.Router;
+import org.opentripplanner.transit.service.TransitModel;
 import org.opentripplanner.util.OTPFeature;
 
 /**
@@ -48,6 +48,9 @@ public class FlexIntegrationTest {
     .toInstant();
 
   static Graph graph;
+
+  static TransitModel transitModel;
+
   static RoutingService service;
   static Router router;
 
@@ -58,22 +61,27 @@ public class FlexIntegrationTest {
 
     var itin = getItinerary(from, to, 2);
 
-    assertEquals(4, itin.legs.size());
+    assertEquals(4, itin.getLegs().size());
 
-    var walkToBus = itin.legs.get(0);
+    var walkToBus = itin.getLegs().get(0);
     assertEquals(TraverseMode.WALK, walkToBus.getMode());
 
-    var bus = itin.legs.get(1);
+    var bus = itin.getLegs().get(1);
     assertEquals(BUS, bus.getMode());
     assertEquals("30", bus.getRoute().getShortName());
 
-    var transfer = itin.legs.get(2);
+    var transfer = itin.getLegs().get(2);
     assertEquals(TraverseMode.WALK, transfer.getMode());
 
-    var flex = itin.legs.get(3);
+    var flex = itin.getLegs().get(3);
     assertEquals(BUS, flex.getMode());
     assertEquals("Zone 2", flex.getRoute().getShortName());
     assertTrue(flex.isFlexibleTrip());
+    assertEquals(
+      "corner of Story Place Southwest and service road (part of Flex Zone 2)",
+      flex.getFrom().name.toString()
+    );
+    assertEquals("Destination (part of Flex Zone 2)", flex.getTo().name.toString());
   }
 
   @Test
@@ -83,23 +91,23 @@ public class FlexIntegrationTest {
 
     var itin = getItinerary(from, to, 1);
 
-    assertEquals(5, itin.legs.size());
+    assertEquals(5, itin.getLegs().size());
 
-    var firstBus = itin.legs.get(0);
+    var firstBus = itin.getLegs().get(0);
     assertEquals(BUS, firstBus.getMode());
     assertEquals("856", firstBus.getRoute().getShortName());
 
-    var transferToSecondBus = itin.legs.get(1);
+    var transferToSecondBus = itin.getLegs().get(1);
     assertEquals(WALK, transferToSecondBus.getMode());
 
-    var secondBus = itin.legs.get(2);
+    var secondBus = itin.getLegs().get(2);
     assertEquals(BUS, secondBus.getMode());
     assertEquals("30", secondBus.getRoute().getShortName());
 
-    var transferToFlex = itin.legs.get(3);
+    var transferToFlex = itin.getLegs().get(3);
     assertEquals(WALK, transferToFlex.getMode());
 
-    var finalFlex = itin.legs.get(4);
+    var finalFlex = itin.getLegs().get(4);
     assertEquals(BUS, finalFlex.getMode());
     assertEquals("Zone 2", finalFlex.getRoute().getShortName());
     assertTrue(finalFlex.isFlexibleTrip());
@@ -115,17 +123,20 @@ public class FlexIntegrationTest {
     var itin = getItinerary(from, to, 1, true);
 
     // walk, flex
-    assertEquals(2, itin.legs.size());
+    assertEquals(2, itin.getLegs().size());
     assertEquals("2021-12-02T12:53:12-05:00[America/New_York]", itin.startTime().toString());
-    assertEquals(3173, itin.generalizedCost);
+    assertEquals(3173, itin.getGeneralizedCost());
 
-    var walkToFlex = itin.legs.get(0);
+    var walkToFlex = itin.getLegs().get(0);
     assertEquals(TraverseMode.WALK, walkToFlex.getMode());
 
-    var flex = itin.legs.get(1);
+    var flex = itin.getLegs().get(1);
     assertEquals(BUS, flex.getMode());
     assertEquals("Zone 2", flex.getRoute().getShortName());
     assertTrue(flex.isFlexibleTrip());
+
+    assertEquals("Transfer Point for Route 30", flex.getFrom().name.toString());
+    assertEquals("Destination (part of Flex Zone 2)", flex.getTo().name.toString());
 
     assertEquals("2021-12-02T13:00-05:00[America/New_York]", flex.getStartTime().toString());
   }
@@ -138,12 +149,15 @@ public class FlexIntegrationTest {
     var martaGtfsPath = getAbsolutePath(FlexTest.MARTA_BUS_856_GTFS);
     var flexGtfsPath = getAbsolutePath(FlexTest.COBB_FLEX_GTFS);
 
-    graph = ConstantsForTests.buildOsmGraph(osmPath);
-    addGtfsToGraph(graph, List.of(cobblincGtfsPath, martaGtfsPath, flexGtfsPath));
-    router = new Router(graph, RouterConfig.DEFAULT, Metrics.globalRegistry);
+    OtpModel otpModel = ConstantsForTests.buildOsmGraph(osmPath);
+    graph = otpModel.graph;
+    transitModel = otpModel.transitModel;
+
+    addGtfsToGraph(graph, transitModel, List.of(cobblincGtfsPath, martaGtfsPath, flexGtfsPath));
+    router = new Router(graph, transitModel, RouterConfig.DEFAULT, Metrics.globalRegistry);
     router.startup();
 
-    service = new RoutingService(graph);
+    service = new RoutingService(graph, transitModel);
   }
 
   @AfterAll
@@ -159,32 +173,34 @@ public class FlexIntegrationTest {
     }
   }
 
-  private static void addGtfsToGraph(Graph graph, List<String> gtfsFiles) {
+  private static void addGtfsToGraph(
+    Graph graph,
+    TransitModel transitModel,
+    List<String> gtfsFiles
+  ) {
     var extra = new HashMap<Class<?>, Object>();
 
     // GTFS
-    var gtfsBundles = gtfsFiles
-      .stream()
-      .map(f -> new GtfsBundle(new File(f)))
-      .collect(Collectors.toList());
+    var gtfsBundles = gtfsFiles.stream().map(f -> new GtfsBundle(new File(f))).toList();
     GtfsModule gtfsModule = new GtfsModule(gtfsBundles, ServiceDateInterval.unbounded());
-    gtfsModule.buildGraph(graph, extra);
+    gtfsModule.buildGraph(graph, transitModel, extra);
 
     // link stations to streets
     StreetLinkerModule streetLinkerModule = new StreetLinkerModule();
-    streetLinkerModule.buildGraph(graph, extra);
+    streetLinkerModule.buildGraph(graph, transitModel, extra);
 
     // link flex locations to streets
     var flexMapper = new FlexLocationsToStreetEdgesMapper();
-    flexMapper.buildGraph(graph, new HashMap<>());
+    flexMapper.buildGraph(graph, transitModel, new HashMap<>());
 
     // generate direct transfers
     var req = new RoutingRequest();
 
     // we don't have a complete coverage of the entire area so use straight lines for transfers
     var transfers = new DirectTransferGenerator(Duration.ofMinutes(10), List.of(req));
-    transfers.buildGraph(graph, extra);
+    transfers.buildGraph(graph, transitModel, extra);
 
+    transitModel.index();
     graph.index();
   }
 
@@ -204,11 +220,15 @@ public class FlexIntegrationTest {
     request.to = to;
     request.numItineraries = 10;
     request.searchWindow = Duration.ofHours(2);
-    request.modes.egressMode = FLEXIBLE;
+
+    var modes = request.modes.copy();
+    modes.withEgressMode(FLEXIBLE);
+
     if (onlyDirect) {
-      request.modes.directMode = FLEXIBLE;
-      request.modes.transitModes = Set.of();
+      modes.withDirectMode(FLEXIBLE);
+      modes.clearTransitModes();
     }
+    request.modes = modes.build();
 
     var result = service.route(request, router);
     var itineraries = result.getTripPlan().itineraries;
